--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -39,11 +39,11 @@ links:
     sublinks:
       - title: Additional GSTV – U-Save
         url: /permalink
-      - title: AP Cash
+      - title: Assurance Package Cash
         url: /permalink
-      - title: AP MediSave
+      - title: Assurance Package MediSave
         url: /permalink
-      - title: COL Special Payment
+      - title: Cost of Living Special Payment
         url: /permalink
       - title: CDC Vouchers
         url: /permalink
