--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -39,7 +39,7 @@ links:
     sublinks:
       - title: Additional GSTV – U-Save
         url: /permalink
-      - title: Assurance Package Cash
+      - title: AP Cash and COL SP
         url: /permalink
       - title: Assurance Package MediSave
         url: /permalink
