--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,18 +7,18 @@ links:
   - title: Am I Elgible?
     url: /am-i-eligible
     sublinks:
-      - title: Assurance Package Cash
+      - title: Assurance Package Cash/COL SP
         url: /ap-cash
       - title: Assurance Package MediSave
         url: /ap-medisave
-      - title: GSTV – Cash (Seniors' Bonus)
-        url: /gstv-cash-seniorsbonus
       - title: Cost of Living Special Payment
         url: /permalink
-      - title: CDC Vouchers
-        url: /permalink
+      - title: GSTV – Cash (Seniors' Bonus)
+        url: /gstv-cash-seniorsbonus
       - title: Additional GSTV – U-Save
         url: /additional-gstv-u-save
+      - title: CDC Vouchers
+        url: /permalink
   - title: When will I be paid?
     url: /when-will-i-be-paid
     sublinks:
