--- a/_am-i-eligible/collection.yml
+++ b/_am-i-eligible/collection.yml
@@ -2,5 +2,6 @@ collections:
   am-i-eligible:
     output: true
     order:
+      - Cost of Living Special Payment.md
       - Assurance Package Cash.md
       - Assurance Package MediSave.md
