--- a/_when-will-i-be-paid/collection.yml
+++ b/_when-will-i-be-paid/collection.yml
@@ -2,4 +2,5 @@ collections:
   when-will-i-be-paid:
     output: true
     order:
+      - Assurance Package MediSave.md
       - Assurance Package Cash.md
