--- a/_when-will-i-be-paid/collection.yml
+++ b/_when-will-i-be-paid/collection.yml
@@ -2,5 +2,6 @@ collections:
   when-will-i-be-paid:
     output: true
     order:
+      - Additional GSTV – U–Save.md
       - Assurance Package MediSave.md
       - Assurance Package Cash.md
