--- a/_when-will-i-be-paid/collection.yml
+++ b/_when-will-i-be-paid/collection.yml
@@ -2,6 +2,7 @@ collections:
   when-will-i-be-paid:
     output: true
     order:
+      - Cost of Living Special Payment.md
       - GSTV – Cash (Seniors' Bonus).md
       - Additional GSTV – U–Save.md
       - Assurance Package MediSave.md
