--- a/_faqs/collection.yml
+++ b/_faqs/collection.yml
@@ -2,5 +2,6 @@ collections:
   faqs:
     output: true
     order:
+      - Additional GSTV – U–Save.md
       - Assurance Package MediSave.md
       - Assurance Package Cash.md
