--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ links:
     collection: am-i-eligible
   - title: When willi be paid
     collection: am-i-eligible
+  - title: FAQs
+    collection: faqs
   - title: Login
     url: /permalink
-  - title: FAQs
-    collection: am-i-eligible
