--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ links:
   - title: Am I eligible?
     collection: am-i-eligible
   - title: When willi be paid
-    collection: am-i-eligible
+    collection: when-will-i-be-paid
   - title: FAQs
     collection: faqs
   - title: Login
