--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ links:
     url: /about-assurancepackage
   - title: Am I eligible?
     collection: am-i-eligible
-  - title: When willi be paid
+  - title: When will I be paid?
     collection: when-will-i-be-paid
   - title: FAQs
     collection: faqs
