--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/isomer-logo.svg
 links:
   - title: Home
-    url: /contact-us/
+    url: https://govbenefits/gov.sg
   - title: About Assurance Package
     url: /about-assurancepackage
   - title: Am I eligible?
