--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,4 +11,4 @@ links:
   - title: FAQs
     collection: faqs
   - title: Login
-    url: /permalink
+    url: https://www.govpayouts.gov.sg/cds/ap/login
