--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,6 @@
 contact_us: /contact-us-ap/
 show_reach: true
 media_release: /media-release/2022/permalink/
-private_policy: /privacy-statement/
+privacy_policy: /privacy-statement/
 terms_of_use: /terms-of-use/
 copyright_agency: Government of Singapore
