--- a/_faqs/collection.yml
+++ b/_faqs/collection.yml
@@ -2,7 +2,7 @@ collections:
   faqs:
     output: true
     order:
-      - Assurance Package Cash.md
+      - Assurance Package Cash, GSTV–Cash (Seniors' Bonus) AP MediSave.md
       - Assurance Package MediSave.md
       - Cost of Living Special Payment.md
       - GSTV – Cash (Seniors' Bonus).md
