--- a/_faqs/collection.yml
+++ b/_faqs/collection.yml
@@ -2,7 +2,7 @@ collections:
   faqs:
     output: true
     order:
-      - Assurance Package Cash, GSTV – Cash (Seniors' Bonus) and AP MediSave.md
+      - Assurance Package Cash, MediSave and GSTV – Cash (Seniors' Bonus).md
       - Assurance Package MediSave.md
       - Additional GSTV – U–Save.md
       - CDC Vouchers.md
