--- a/_am-i-eligible/collection.yml
+++ b/_am-i-eligible/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Assurance Package Cash.md
       - Assurance Package MediSave.md
-      - Cost of Living Special Payment.md
+      - Cost of Living Special Payment (use this for highlight section).md
       - GSTV – Cash (Seniors' Bonus).md
       - Additional GSTV – U–Save.md
       - CDC Vouchers.md
