--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -4,3 +4,4 @@ media_release: /media-release/2022/permalink/
 privacy_policy: /privacy-statement/
 terms_of_use: /terms-of-use/
 copyright_agency: Government of Singapore
+social_media: {}
