--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Assurance Package Scheme
 url: https://govbenefits.gov.sg
 favicon: /images/ap_logo1.png
 colors:
-  primary-color: "#6031b6"
+  primary-color: "#ab8d55"
   secondary-color: "#4372d6"
   media-colors:
     - title: media-color-one
