--- a/_am-i-eligible/collection.yml
+++ b/_am-i-eligible/collection.yml
@@ -2,6 +2,7 @@ collections:
   am-i-eligible:
     output: true
     order:
+      - AP MTS.md
       - Assurance Package Cash.md
       - Assurance Package MediSave.md
       - GSTV – Cash (Seniors' Bonus).md
