--- a/_faqs/collection.yml
+++ b/_faqs/collection.yml
@@ -3,6 +3,6 @@ collections:
     output: true
     order:
       - Assurance Package Cash, MediSave and GSTV – Cash (Seniors' Bonus).md
-      - Assurance Package MediSave.md
+      - FAQ Accordion.md
       - Additional GSTV – U–Save.md
       - CDC Vouchers.md
