--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,7 +1,7 @@
 contact_us: /contact-us-ap/
 show_reach: true
 media_release: /media-release/2022/permalink/
-privacy_policy: /privacy-statement/
+privacy_policy: /privacy/
 terms_of_use: /terms-of-use/
 copyright_agency: Government of Singapore
 social_media: {}
