--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,4 @@
-contact_us: /contact-us-ap/
+contact_us: /contact-us/
 show_reach: true
 media_release: /media-release/2022/permalink/
 privacy_policy: /privacy/
