--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/ap_logo1.png
 links:
   - title: Home
-    url: https://govbenefits/gov.sg
+    url: https://www.govbenefits.gov.sg
   - title: About Assurance Package
     url: /about-assurancepackage
   - title: Am I eligible?
