--- a/_faqs/collection.yml
+++ b/_faqs/collection.yml
@@ -2,6 +2,7 @@ collections:
   faqs:
     output: true
     order:
+      - FAQ Accordion.md
       - Assurance Package Cash, MediSave and GSTV – Cash (Seniors' Bonus).md
       - Additional GSTV – U–Save.md
       - CDC Vouchers.md
