--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,8 @@ links:
     collection: am-i-eligible
   - title: When will I be paid?
     collection: when-will-i-be-paid
+  - title: Cost-Of-Living Special Payment
+    url: /costofliving-special-payment/
   - title: FAQs
     collection: faqs
   - title: Login
